--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: sys41x4 # Your GitHub organization or username, where this repository lives
-repo: upptime-tracker # The name of this repository
+owner: arijit-bhowmick # Your GitHub organization or username, where this repository lives
+repo: uptime # The name of this repository
 
 sites:
   - name: Arijit Bhowmick Personal Website
